tests/baselines/reference/superCallInConstructorWithNoBaseType.errors.txt
==== tests/cases/compiler/superCallInConstructorWithNoBaseType.ts (2 errors) ====
    class C {
        constructor() {
            super(); // error
            ~~~~~
!!! error TS2103: 'super' cannot be referenced in non-derived classes.
        }
    }
    
    class D<T> {
        public constructor(public x: T) {
            super(); // error
            ~~~~~
!!! error TS2103: 'super' cannot be referenced in non-derived classes.
        }
    }